--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^6.0.4",
+    "flow-bin": "^0.98.1",
     "react": "16.8.3",
     "react-native": "0.59.8"
   },
