--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "firebase": "^6.0.4",
     "flow-bin": "^0.98.1",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-native-firebase": "^5.3.1",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-screens": "^1.0.0-alpha.22",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
