--- a/package.json
+++ b/package.json
@@ -8,28 +8,24 @@
   },
   "dependencies": {
     "flow-bin": "^0.98.1",
-    "react": "16.8.3",
-    "react-native": "^0.59.9",
-    "react-native-firebase": "^5.3.1",
+    "react": "^16.8.3",
+    "react-native": "^0.60.5",
+    "react-native-firebase": "~5.5.6",
     "react-native-gesture-handler": "^1.2.1",
-    "react-native-ionicons": "^4.5.6",
-    "react-native-screens": "^1.0.0-alpha.22",
-    "react-navigation": "^3.11.0"
+    "react-native-ionicons": "^4.6.1",
+    "react-native-raw-bottom-sheet": "^2.0.2",
+    "react-native-screens": "^1.0.0-alpha.23",
+    "react-navigation": "^3.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.4.5",
-    "babel-jest": "^24.8.0",
-    "jest": "^24.8.0",
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts"
-    ]
   }
 }
