--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "flow-bin": "^0.98.1",
     "react": "^16.8.3",
     "react-native": "^0.60.5",
+    "react-native-color-palette": "^2.0.3",
     "react-native-firebase": "~5.5.6",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-ionicons": "^4.6.1",
     "react-native-raw-bottom-sheet": "^2.0.2",
     "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-svg": "^9.6.4",
     "react-navigation": "^3.11.1"
   },
   "devDependencies": {
