--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "Paylist",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start:android": "react-native run-android",
+    "build:android": "(rm -rf android/app/build) & react-native run-android",
+    "build:android-nodev": "(rm -rf android/app/build) & react-native run-android --dev false",
+    "build:android-release": "(rm -rf android/app/build) & react-native run-android --variant=release",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
     "flow-bin": "^0.98.1",
     "react": "^16.8.3",
     "react-native": "^0.60.5",
-    "react-native-color-palette": "^2.0.3",
+    "react-native-color-palette": "^2.1.0",
     "react-native-firebase": "~5.5.6",
     "react-native-gesture-handler": "^1.2.1",
-    "react-native-ionicons": "^4.6.1",
-    "react-native-raw-bottom-sheet": "^2.0.2",
+    "react-native-ionicons": "^4.6.3",
+    "react-native-raw-bottom-sheet": "^2.0.5",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-navigation": "^3.11.1"
   },
