--- a/ios/Paylist/Info.plist
+++ b/ios/Paylist/Info.plist
@@ -65,7 +65,9 @@
 	<string>Camera will only be used to capture your ticket</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Audio will not be used for anything, this is just a required permission</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
