--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-color-palette": "^2.2.0",
     "react-native-firebase": "~5.5.6",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-image-zoom-viewer": "^2.2.26",
     "react-native-ionicons": "^4.6.3",
     "react-native-raw-bottom-sheet": "^2.0.6",
     "react-native-screens": "^1.0.0-alpha.23",
