--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "start": "react-native start",
     "start:reset": "react-native start --reset-cache",
     "android": "react-native run-android",
-    "android:build": "(rm -rf android/app/build) & react-native run-android",
-    "android:build-nodebug": "(rm -rf android/app/build) & react-native run-android --dev false",
-    "android:build-release": "(rm -rf android/app/build) & react-native run-android --variant=release",
+    "android:cleanbuild": "(rm -rf android/app/build) & react-native run-android",
+    "android:release": "(rm -rf android/app/build) & react-native run-android --variant=release",
     "ios": "react-native run-ios --simulator='iPhone 11 Pro'",
-    "ios:build": "(rm -rf ios/build) & npx react-native run-ios --simulator='iPhone 11 Pro'",
-    "ios:build-release": "(rm -rf ios/build) & npx react-native run-ios --configuration Release --simulator='iPhone 11 Pro'",
+    "ios:release": "react-native run-ios --configuration Release --simulator='iPhone 11 Pro'",
     "test": "jest"
   },
   "dependencies": {
