--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     splits {
         abi {
@@ -189,13 +190,13 @@ android {
 }
 
 dependencies {
-    implementation project(':react-native-camera')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation project(':react-native-screens')
     implementation project(':react-native-firebase')
     implementation project(':react-native-gesture-handler')
+    implementation project(':react-native-camera')
 
     // Firebase dependencies
     implementation project(path: ':react-native-firebase')
